# qDAX

./: .gitignore  CMakeLists.txt  README.rst
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addtagdialog.cpp  addtagdialog.h  addtagdialog.ui  addtypedialog.cpp  addtypedialog.h  addtypedialog.ui  config.h.in  dax.cpp  dax.h  eventworker.cpp  eventworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdax.h  tagList.cpp  tagList.h  tagitem.cpp  tagitem.h  tagmodel.cpp  tagmodel.h  watchitem.cpp  watchitem.h
